[package]
name = "orderbook"
version = "0.1.0"
edition = "2024"

[dependencies]
uuid = { version = "1.18.1", features = ["v4", "serde"] }
chrono = "0.4"
thiserror = "1.0"
log = "^0.4"
env_logger = "^0.11"
intrusive-collections = "^0.9.7"
rand = "0.8"


[profile.release]
debug = true



[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "benchmark"
path = "src/benchmark.rs"
